--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -3,13 +3,7 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  max-height: 100vh;
 }
 
 .footer {
